[Delivers #177851373] Fix spacing Fix file table indexing Fix table border colour

--- a/src/main/webapp/css/detail.css
+++ b/src/main/webapp/css/detail.css
@@ -31,6 +31,7 @@ body.is-reveal-open { /*avoid jumping of body to the left*/
     padding: 0pt 6pt 0pt 1pt;
     min-width: max-content;
     width: max-content;
+    line-height: 1em;
 }
 .inline-block {
     display: inline-block;
@@ -103,7 +104,6 @@ a.reference:hover {
 .table-wrapper {
     overflow: auto;
     font-size: 10pt;
-    border: 1px solid hsla(201, 65%, 95%, 1);
 }
 
 
